# stb-crop

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  rpi-toolchain.cmake
scripts/: cut.sh
src/: main.cpp
